# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  config.yaml
.github/workflows/: general.yml
.sqlx/: query-09517798f621896cfc4dea1a3e3822d0d0a975779d4d353e542a6ffe425cfb9f.json
migrations/: 20241005053148_create_subscriptions_table.sql  20241005142123_create_subscriptions_table.sql  20241006132729_create_subscriptions_table.sql  20241014181119_create_subscriptions_table.sql  20241016151506_make_status_not_null_in_subscriptions.sql  20241016152455_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
